# lua-hotloader

api/: database.js  package-lock.json  package.json  passport-config.js  server.js
api/data/armory/: cl_content.lua
api/data/armory/base/: cl_armory.lua  cl_classes_selection.lua  cl_client_models.lua
api/data/armory/weapons/: falcon_btx50.lua  falcon_dc15a.lua  falcon_dc15as.lua  falcon_dc15d.lua  falcon_dc15s.lua  falcon_dc15x.lua  falcon_dc19.lua  falcon_dlt16.lua  falcon_dlt16s.lua  falcon_dp23.lua  falcon_dp24.lua  falcon_e5.lua  falcon_e5c.lua  falcon_e5l.lua  falcon_e5x.lua  falcon_e7.lua  falcon_e9dr.lua  falcon_t19.lua  falcon_weapon_base.lua  falcon_westar_m35.lua
api/data/jvs_transport/base/: cl_transport.lua  sv_transport.lua
api/data/jvs_transport/ui/: cl_ui.lua
api/data/rts/: cl_ui.lua  sv_ai.lua
api/data/swrp/entities/: testfile.lua
api/data/swrp/entities/falcons_boss_aat/: init.lua  shared.lua
api/data/swrp/entities/testFolder/: cl_init.lua  init.lua  shared.lua
api/data/swrp/gamemode/: cl_init.lua  init.lua  shared.lua
api/data/swrp/gamemode/base/: sv_player.lua
api/data/swrp/gamemode/base/player/: sv_death.lua
api/data/swrp/gamemode/modules/: cl_menu.lua
api/data/transport/: cl_content.lua  cl_ui.lua
api/data/transport/entities/: falcon_holocron.lua
api/public/css/: nav.css  site.css
api/public/css/portal/: nav.css  site.css
api/public/js/: site.js
api/views/: login.ejs
dll/: CMakeLists.txt  module.cpp
script/: apitest.txt
script/gamemode/: cl_init.lua  init.lua  shared.lua
